added view on github link

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,9 @@
       <small>Press SPACE to play/pause video.</small>
       <small>Press M to mute/unmute video.</small>
       <small>Press C to toggle control-bar on/off</small>
+      <div class="links"><a target="_blank" href="https://github.com/emaglic/vertical-video-player">View on Github</a></div>
     </div>
+
     <div class="vertical-video-container"></div>
   <script defer src="index.js"></script></body>
 </html>
